--- a/css/dev.css
+++ b/css/dev.css
@@ -9,37 +9,47 @@ body {
 }
 
 .mainbox {
-    width: var(--mainPageSize);
+    text-align: center;
     height: var(--mainPageSize);
-    padding-bottom: 1%; /* will remove */
+    width: var(--mainPageSize);
+    margin-left: 25%;
+    margin-right: 25%;
+
+    background: linear-gradient(90deg, var(--colourBg) 50%, var(--colour7) 50%);
     -moz-box-shadow: 0 0 30px var(--colourLn);
     -webkit-box-shadow: 0 0 30px var(--colourLn);
     box-shadow: 0 0 30px var(--colourLn);
 }
 
+/* calc(var(--mainPageSize)); */
+
 .header {
     float: left;
     width: var(--mainPageSize);
+    height: var(--navWidth);
     background-color: var(--colour1);
 }
 
-.title {
+.titleHeader {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: var(--navWidth);
+    /* height: var(--navHeight); */
 }
+
 .titleHead {
     padding-left: 2%;
     font-size: xx-large;
+    height: var(--navHeight);
 }
+
 em {
     font-size: large;
 }
 
 .navbox {
     width: var(--navWidth);
-    height: var(--navWidth);
+    height: var(--navHeight);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,15 +60,19 @@ em {
 .box1 {
     background-color: var(--colour7);
 }
+
 .box2 {
     background-color: var(--colour3);
 }
+
 .box3 {
     background-color: var(--colour2);
 }
+
 .box4 {
     background-color: var(--colour5);
 }
+
 .box5 {
     background-color: var(--colour4);
 }
@@ -69,6 +83,58 @@ em {
     justify-content: left;
     align-items: left;
     flex-direction: row;
-  
+
     width: var(--mainCircleContainerSize);
+}
+
+.circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: var(--navDiameter);
+    height: var(--navDiameter);
+    border: var(--borderSize) solid var(--colourLn);
+    padding: 0;
+    border-radius: var(--navDiameter);
+    -moz-border-radius: var(--navDiameter);
+    -webkit-border-radius: var(--navDiameter);
+}
+
+.aboutMe {
+    width: calc(var(--navDiameter)*1.5);
+    height: calc(var(--navDiameter)*1.5);
+    border-radius: calc(var(--navDiameter)*1.5);
+    -moz-border-radius: calc(var(--navDiameter)*1.5);
+    -webkit-border-radius: calc(var(--navDiameter)*1.5);
+}
+
+.contactForm {
+    flex-direction: column;
+}
+
+.btnSend {
+    border: none;
+    background-color: var(--colour7);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.title {
+    display: none;
+    text-align: fill;
+    width: var(--navDiameter);
+    border: var(--borderSize) solid var(--colourLn);
+    padding-right: 1%;
+    padding-left: 1%;
+    border-radius: calc(var(--navDiameter)/2);
+    -moz-border-radius: calc(var(--navDiameter)/2);
+    -webkit-border-radius: calc(var(--navDiameter)/2);
+    margin-top: 1%;
+    font-size: small;
 }
