--- a/css/const.css
+++ b/css/const.css
@@ -1,17 +1,27 @@
+@import url('http://fonts.cdnfonts.com/css/boowie');
+@import url('http://fonts.cdnfonts.com/css/helios-antique');
+
 :root {
-    /* color */
+    /* COLOUR */
     /* https://www.allacronyms.com/color/abbreviations */
 
     --colourOrg: #EBA63F;
+    --colourLOrg: #f8dfb9;
     --colourGr: #438945;
+    --colourLGr: #9bcf9d;
     --colourRd: #E40C2B;
+    --colourLRd: #f093a1;
     --colourPpl: #AC54EA;
     --colourLBlu: #3CBCC3;
     --colourDBlu: #1D1D2C;
     --colourWht: #F7F4E9;
     --colourBlk: #000;
-    
-    /* size */
+
+    /* FONT */
+    --pageFont: 'Helios Antique', sans-serif;
+    --headerFont: 'BOOWIE', sans-serif;
+
+    /* SIZE */
     --mainPageSize: 95vmin;
   
     --mainCircleContainerSize: calc(var(--mainPageSize)*0.5);
@@ -28,8 +38,6 @@
     --mainDiameter: var(--mainCircleContainerSize);
     --outerDiameter: calc(var(--mainCircleContainerSize)*0.25);
     --navDiameter: calc(var(--navWidth)*0.25);
-  
-    --devWidth: calc(var(--mainCircleContainerSize)*0.75);
     
     --canvasSize: var(--mainCircleContainerSize);
   
@@ -39,8 +47,6 @@
     --iconSizeNavbar: calc(var(--navDiameter)*0.8);
   
     /* margin math */
-    --devColumnMargin: calc(var(--outerDiameter)*0.5);
-
     --topMarginVertical: calc((var(--mainPageSize)*0.25) - (var(--circleMargin) + var(--outerDiameter)));
     --topMarginHorizontal: calc(var(--mainCircleContainerSize) - (var(--outerDiameter)*0.5));
   
@@ -51,4 +57,25 @@
     --bottomMarginHorizontalRight: calc((0.29 * var(--mainDiameter)) - (0.21 * var(--outerDiameter)) + var(--circleMargin));
     --bottomMarginHorizontalLeft: calc(var(--mainCircleContainerSize) - (var(--bottomMarginHorizontalRight) + var(--outerDiameter)));
     --bottomMarginVertical: calc((-0.1 * var(--mainDiameter)) - (0.1 * var(--outerDiameter)) + var(--circleMargin));
-  }
+  
+    /* About Page size*/
+    --aboutMainWidth: calc(var(--mainPageSize)*0.25 + var(--mainPageSize));
+    --aboutMainHeight: calc(var(--mainPageSize) - var(--aboutHeaderHeight));
+    
+    --aboutHeaderHeight: calc(var(--outerCircleContainerSize)*0.5);
+    --aboutTitleColWidth: calc(var(--aboutMainWidth) - var(--aboutHeaderHeight));
+    
+    --aboutMainShape: calc(var(--mainCircleContainerSize) - var(--outerCircleContainerSize));
+
+    --aboutSideColumns: calc((var(--aboutMainWidth) - var(--aboutMainShape))*0.5);
+    --aboutCenterShapeMarginTop: calc((var(--aboutMainHeight) - var(--aboutMainShape))*0.5);
+
+    --aboutFormSizeWidth: calc(var(--aboutSideColumns) - (var(--aboutBodyFont)*4));
+
+    /* Font Size */
+    --aboutTitleFont: calc((var(--mainPageSize)*0.155)*0.75);
+    --aboutHomeBtnFont: calc(var(--aboutTitleFont)*1.5);
+    --aboutBodyFont: calc(var(--aboutTitleFont)*0.15);
+
+    --aboutFontSubTxtMargin: calc(var(--aboutHomeBtnFont) - (var(--aboutBodyFont)*8));
+}
